--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -91,7 +91,7 @@ p {
 /* estrutura blocos*/
 body {
     overflow-x: hidden;
-    background-image: linear-gradient(to bottom, #E6FFE7, #00A7B3);
+    background-image: linear-gradient( #adf9b5,#dafad2, #00A7B3);
 }
 
 #booklet {
@@ -172,7 +172,6 @@ body {
     background-color: #fff;
     opacity: 0.96;
     margin-bottom: -2020px;
-    margin-top: -500px;
 
 }
 
@@ -241,7 +240,7 @@ body {
 .bloco1-pg2 {
     position: relative;
     background-image: url('../../img/assets/pg2/bg1.png');
-    background-size: cover;
+    background-size: 100% 100%;;
     background-color: #00A7B3;
     background-repeat: no-repeat;
 
@@ -275,12 +274,12 @@ body {
 
 .bloco2-pg2 {
     position: relative;
-    /* background-image: linear-gradient(to bottom, #00A7B3, #7CDADD); */
-    background-color: #00A7B3;
-    background-size: cover;
-    background-attachment: fixed;
+    background: url(../../img/assets/pg2/bg_div.png),
+    linear-gradient( #00A7B3, #CE975B); 
+    background-position: center 70%;
+    background-size: contain;
+    background-attachment: unset;
     background-repeat: no-repeat;
-
 }
 
 figcaption {
@@ -2724,7 +2723,6 @@ table.sesc td {
         opacity: 0.98;
         padding-top: 74px;
         margin-bottom: -2024px;
-        margin-top: -500px;
     }
 
     .bloco2-pg1 {
