--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -119,12 +119,26 @@ body {
     position: relative;
 }
 
+.paragrafo-grama{
+    position: relative;
+    z-index: 12;
+}
+.bloco3-encerramento{
+    margin: 60px 0px;
+}
+.bloco3-encerramento p{
+    margin: 20px 0px;
+}
+
+
 .bloco3-paralax1pg3 {
     background: url(../../img/assets/pg3/bg_div.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 408px;
     margin-bottom: -27px;
+    position: relative;
+    z-index: 10;
 }
 
 .painel-container {
@@ -195,7 +209,7 @@ body {
     background-color: #fff;
     opacity: 0.96;
     margin-bottom: -2020px;
-
+    padding-bottom: 100px;
 }
 
 .pagina>.container {
@@ -279,6 +293,7 @@ body {
     background-repeat: no-repeat;
     background-position: center 1337px;
 }
+
 
 
 .bloco2-pg2 {
@@ -834,6 +849,17 @@ table.sesc td {
 }
 
 /* fim cards*/
+
+
+
+.paragrafo-mapa{
+    margin-top: 500px;
+}
+
+.div-flip{
+    height: 480px;
+}
+
 
 @media (max-width: 2560px) {
     .rellax-2 {
@@ -1615,6 +1641,12 @@ table.sesc td {
     }
 }
 
+@media (min-height: 800px) {
+    .painel {
+        margin-bottom: -700px !important;
+    }
+}
+
 @media (max-width: 1400px) {
     .painel {
         margin-bottom: -444px;
@@ -1633,18 +1665,6 @@ table.sesc td {
         left: 52px;
     }
 
-    .bt-caatinga {
-        background-image: url(../../img/assets/pg1/bt_caatinga.png);
-        background-color: transparent;
-        border: none;
-        width: 136px;
-        height: 137px;
-        background-repeat: no-repeat;
-        position: absolute;
-        right: 30px;
-        top: 133px;
-    }
-
     .bt-cerrado {
         background-image: url(../../img/assets/pg1/bt_cerrado.png);
         background-color: transparent;
@@ -1656,7 +1676,6 @@ table.sesc td {
         right: 153px;
         top: 76px;
     }
-
     .bt-cerrado:hover {
         background-image: url('../../img/assets/pg1/mapa_bt2_hover.png');
         background-color: transparent;
@@ -1670,6 +1689,17 @@ table.sesc td {
         top: 76px;
     }
 
+    .bt-caatinga {
+        background-image: url(../../img/assets/pg1/bt_caatinga.png);
+        background-color: transparent;
+        border: none;
+        width: 136px;
+        height: 137px;
+        background-repeat: no-repeat;
+        position: absolute;
+        right: 20px;
+        top: 180px;
+    }
     .bt-caatinga:hover {
         background-image: url('../../img/assets/pg1/mapa_bt3_hover.png');
         background-color: transparent;
@@ -1840,8 +1870,8 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 254px;
-        right: 171px;
+        bottom: 240px;
+        right: 100px;
     }
 
     .bt-mata:hover {
@@ -1853,8 +1883,8 @@ table.sesc td {
         transform: scale(1.1);
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 254px;
-        right: 171px;
+        bottom: 240px;
+        right: 100px;
     }
 
     .bt-pampa {
@@ -1865,7 +1895,7 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 174px;
+        bottom: 50px;
         right: 476px;
     }
 
@@ -1876,8 +1906,8 @@ table.sesc td {
         width: 303px;
         height: 304px;
         transform: scale(1.1);
-        bottom: 174px;
-        right: 476px;
+        bottom: 50px;
+        right: 440px;
         background-repeat: no-repeat;
     }
 
@@ -1889,8 +1919,8 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 362px;
-        left: 200px;
+        bottom: 220px;
+        left: 220px;
     }
 
     .bt-pantanal:hover {
@@ -1901,7 +1931,7 @@ table.sesc td {
         border: none;
         transform: scale(1.1);
         background-repeat: no-repeat;
-        bottom: 362px;
+        bottom: 220px;
         left: 200px;
     }
 
@@ -2357,79 +2387,6 @@ table.sesc td {
 }
 
 @media (max-width:820px) {
-    .bt-mata:hover {
-        background-image: url('../../img/assets/pg1/mapa_bt5_hover.png');
-        background-color: transparent;
-        border: none;
-        width: 303px;
-        height: 304px;
-        transform: scale(1.1);
-        background-repeat: no-repeat;
-        position: absolute;
-        bottom: 885px;
-        right: 171px;
-    }
-
-    .bt-mata {
-        background-image: url(../../img/assets/pg1/bt_mata.png);
-        background-color: transparent;
-        border: none;
-        width: 136px;
-        height: 137px;
-        background-repeat: no-repeat;
-        position: absolute;
-        bottom: 885px;
-        right: 171px;
-    }
-
-    .bt-pampa:hover {
-        background-image: url('../../img/assets/pg1/mapa_bt6_hover.png');
-        background-color: transparent;
-        border: none;
-        width: 303px;
-        height: 304px;
-        transform: scale(1.1);
-        background-repeat: no-repeat;
-        bottom: 796px;
-        right: 407px;
-    }
-
-    .bt-pampa {
-        background-image: url(../../img/assets/pg1/bt_pampa.png);
-        background-color: transparent;
-        border: none;
-        width: 136px;
-        height: 137px;
-        background-repeat: no-repeat;
-        position: absolute;
-        bottom: 796px;
-        right: 407px;
-    }
-
-    .bt-pantanal:hover {
-        background-image: url('../../img/assets/pg1/mapa_bt4_hover.png');
-        width: 303px;
-        height: 304px;
-        background-color: transparent;
-        border: none;
-        transform: scale(1.1);
-        background-repeat: no-repeat;
-        bottom: 1012px;
-        left: 200px;
-    }
-
-    .bt-pantanal {
-        background-image: url(../../img/assets/pg1/bt_pantanal.png);
-        background-color: transparent;
-        border: none;
-        width: 136px;
-        height: 137px;
-        background-repeat: no-repeat;
-        position: absolute;
-        bottom: 1012px;
-        left: 200px;
-    }
-
     .painel {
         display: flex;
         flex-wrap: nowrap;
@@ -2441,9 +2398,10 @@ table.sesc td {
         height: 86vh;
     }
 
-}
+    .paragrafo-mapa{
+        margin-top: 0;
+    }
 
-@media (max-width:800px) {
     .bt-mata:hover {
         background-image: url('../../img/assets/pg1/mapa_bt5_hover.png');
         background-color: transparent;
@@ -2453,8 +2411,8 @@ table.sesc td {
         transform: scale(1.1);
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 4575px;
-        right: 171px;
+        bottom: 4675px;
+        right: 100px;
     }
 
     .bt-mata {
@@ -2465,8 +2423,8 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 4575px;
-        right: 171px;
+        bottom: 4675px;
+        right: 100px;
     }
 
     .bt-pampa:hover {
@@ -2477,7 +2435,7 @@ table.sesc td {
         height: 304px;
         transform: scale(1.1);
         background-repeat: no-repeat;
-        bottom: 4471px;
+        bottom: 4500px;
         right: 407px;
     }
 
@@ -2489,7 +2447,7 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 4471px;
+        bottom: 4500px;
         right: 407px;
     }
 
@@ -2501,7 +2459,7 @@ table.sesc td {
         border: none;
         transform: scale(1.1);
         background-repeat: no-repeat;
-        bottom: 4698px;
+        bottom: 4740px;
         left: 200px;
     }
 
@@ -2513,7 +2471,7 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 4698px;
+        bottom: 4740px;
         left: 200px;
     }
 
@@ -2525,7 +2483,7 @@ table.sesc td {
         border: none;
         transform: scale(1.1);
         background-repeat: no-repeat;
-        top: 2661px;
+        top: 2690px;
         left: 11px;
     }
 
@@ -2537,7 +2495,7 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        top: 2661px;
+        top: 2690px;
         left: 11px;
     }
 
@@ -2551,7 +2509,7 @@ table.sesc td {
         background-repeat: no-repeat;
         position: absolute;
         right: 136px;
-        top: 2607px;
+        top: 2650px;
     }
 
     .bt-cerrado {
@@ -2563,7 +2521,7 @@ table.sesc td {
         background-repeat: no-repeat;
         position: absolute;
         right: 136px;
-        top: 2607px;
+        top: 2650px;
     }
 
     .bt-caatinga:hover {
@@ -2575,7 +2533,7 @@ table.sesc td {
         transform: scale(1.1);
         background-repeat: no-repeat;
         right: 1px;
-        top: 2679px;
+        top: 2710px;
     }
 
     .bt-caatinga {
@@ -2587,7 +2545,7 @@ table.sesc td {
         background-repeat: no-repeat;
         position: absolute;
         right: 1px;
-        top: 2679px;
+        top: 2710px;
     }
 }
 
@@ -2600,19 +2558,6 @@ table.sesc td {
         background-size: cover;
         background-position: center;
         height: 400px;
-    }
-
-    .bt-mata:hover {
-        background-image: url('../../img/assets/pg1/mapa_bt5_hover.png');
-        background-color: transparent;
-        border: none;
-        width: 303px;
-        height: 304px;
-        transform: scale(1.1);
-        background-repeat: no-repeat;
-        position: absolute;
-        bottom: 3620px;
-        right: 171px;
     }
 
     .moldurapg2 {
@@ -2637,6 +2582,19 @@ table.sesc td {
         margin-bottom: -27px;
     }
 
+    .bt-mata:hover {
+        background-image: url('../../img/assets/pg1/mapa_bt5_hover.png');
+        background-color: transparent;
+        border: none;
+        width: 303px;
+        height: 304px;
+        transform: scale(1.1);
+        background-repeat: no-repeat;
+        position: absolute;
+        bottom: 4575px;
+        right: 100px;
+    }
+
     .bt-mata {
         background-image: url(../../img/assets/pg1/bt_mata.png);
         background-color: transparent;
@@ -2645,8 +2603,8 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 3620px;
-        right: 171px;
+        bottom: 4575px;
+        right: 100px;
     }
 
     .bt-pampa:hover {
@@ -2657,8 +2615,8 @@ table.sesc td {
         height: 304px;
         transform: scale(1.1);
         background-repeat: no-repeat;
-        bottom: 3530px;
-        right: 390px;
+        bottom: 4400px;
+        right: 407px;
     }
 
     .bt-pampa {
@@ -2669,11 +2627,9 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 3530px;
-        right: 390px;
+        bottom: 4400px;
+        right: 407px;
     }
-
-
 
     .bt-pantanal:hover {
         background-image: url('../../img/assets/pg1/mapa_bt4_hover.png');
@@ -2683,8 +2639,8 @@ table.sesc td {
         border: none;
         transform: scale(1.1);
         background-repeat: no-repeat;
-        bottom: 3763px;
-        left: 181px;
+        bottom: 4600px;
+        left: 200px;
     }
 
     .bt-pantanal {
@@ -2695,32 +2651,20 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 3763px;
-        left: 181px;
+        bottom: 4600px;
+        left: 200px;
     }
 
-    .bt-cerrado {
-        background-image: url(../../img/assets/pg1/bt_cerrado.png);
+    .bt-amazonia:hover {
+        background-image: url('../../img/assets/pg1/mapa_bt1_hover.png');
+        width: 303px;
+        height: 304px;
         background-color: transparent;
         border: none;
-        width: 136px;
-        height: 137px;
+        transform: scale(1.1);
         background-repeat: no-repeat;
-        position: absolute;
-        right: 136px;
-        top: 2654px;
-    }
-
-    .bt-caatinga {
-        background-image: url(../../img/assets/pg1/bt_caatinga.png);
-        background-color: transparent;
-        border: none;
-        width: 136px;
-        height: 137px;
-        background-repeat: no-repeat;
-        position: absolute;
-        right: 1px;
-        top: 2714px;
+        top: 2690px;
+        left: 11px;
     }
 
     .bt-amazonia {
@@ -2731,20 +2675,7 @@ table.sesc td {
         height: 137px;
         background-repeat: no-repeat;
         position: absolute;
-        top: 2699px;
-        left: 11px;
-    }
-
-
-    .bt-amazonia:hover {
-        background-image: url('../../img/assets/pg1/mapa_bt1_hover.png');
-        width: 303px;
-        height: 304px;
-        background-color: transparent;
-        border: none;
-        transform: scale(1.1);
-        background-repeat: no-repeat;
-        top: 2560px;
+        top: 2690px;
         left: 11px;
     }
 
@@ -2758,7 +2689,19 @@ table.sesc td {
         background-repeat: no-repeat;
         position: absolute;
         right: 136px;
-        top: 2654px;
+        top: 2650px;
+    }
+
+    .bt-cerrado {
+        background-image: url(../../img/assets/pg1/bt_cerrado.png);
+        background-color: transparent;
+        border: none;
+        width: 136px;
+        height: 137px;
+        background-repeat: no-repeat;
+        position: absolute;
+        right: 136px;
+        top: 2650px;
     }
 
     .bt-caatinga:hover {
@@ -2768,9 +2711,21 @@ table.sesc td {
         width: 303px;
         height: 304px;
         transform: scale(1.1);
-        right: 1px;
-        top: 2714px;
         background-repeat: no-repeat;
+        right: 1px;
+        top: 2710px;
+    }
+
+    .bt-caatinga {
+        background-image: url(../../img/assets/pg1/bt_caatinga.png);
+        background-color: transparent;
+        border: none;
+        width: 136px;
+        height: 137px;
+        background-repeat: no-repeat;
+        position: absolute;
+        right: 1px;
+        top: 2710px;
     }
 }
 
@@ -3201,6 +3156,90 @@ table.sesc td {
         margin-top: unset;
     }
 
+    .div-flip{
+        height: 100%;
+    }
+
+    .bt-mata_mobile {
+        background-image: url(../../img/assets/pg1/bt_mata.png);
+        background-color: transparent;
+        background-size: 100%;
+        border: none;
+        width: 220px;
+        height: 222px;
+        background-repeat: no-repeat;
+        display: block;
+        margin: 0 auto;
+    }
+    .bt-pampa_mobile {
+        background-image: url(../../img/assets/pg1/bt_pampa.png);
+        background-color: transparent;
+        background-size: 100%;
+        border: none;
+        width: 220px;
+        height: 222px;
+        background-repeat: no-repeat;
+        display: block;
+        margin: 0 auto;
+    }
+    .bt-pantanal_mobile {
+        background-image: url(../../img/assets/pg1/bt_pantanal.png);
+        background-color: transparent;
+        background-size: 100%;
+        border: none;
+        width: 220px;
+        height: 222px;
+        background-repeat: no-repeat;
+        display: block;
+        margin: 0 auto;
+    }
+    .bt-cerrado_mobile {
+        background-image: url(../../img/assets/pg1/bt_cerrado.png);
+        background-color: transparent;
+        background-size: 100%;
+        border: none;
+        width: 220px;
+        height: 222px;
+        background-repeat: no-repeat;
+        display: block;
+        margin: 0 auto;
+    }
+    .bt-caatinga_mobile {
+        background-image: url(../../img/assets/pg1/bt_caatinga.png);
+        background-color: transparent;
+        background-size: 100%;
+        border: none;
+        width: 220px;
+        height: 222px;
+        background-repeat: no-repeat;
+        display: block;
+        margin: 0 auto;
+    }
+    .bt-amazonia_mobile {
+        background-image: url(../../img/assets/pg1/bt_amazonia.png);
+        background-color: transparent;
+        background-size: 100%;
+        border: none;
+        width: 220px;
+        height: 222px;
+        background-repeat: no-repeat;
+        display: block;
+        margin: 0 auto;
+    }
+    
+    .fundobarragem{
+        min-height: auto;
+        height: 500px;
+    }
+
+    .pagina>div>.container.estilopg2{
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+    .pagina>div>.container.estilopg2-3{
+        padding-top: 10px;
+        padding-bottom: 100px;
+    }
 }
 
 @media (max-width:424px) {
