--- a/objeto/biomas/css/game-custom.css
+++ b/objeto/biomas/css/game-custom.css
@@ -131,6 +131,10 @@
     top: 130px;
     right: 35px;
   }
+  .mapa-bolinha.card2 {
+    bottom: 50px;
+    left: 210px;
+  }
   .mapa-bolinha.card3 {
     bottom: 0px;
     left: 140px;
@@ -162,6 +166,14 @@
   .mapa-bolinha.card10 {
     bottom: -20px;
     left: 200px;
+  }
+  .mapa-bolinha.card11 {
+    top: 180px;
+    right: 130px;
+  }
+  .mapa-bolinha.card12 {
+    bottom: 86px;
+    left: 114px;
   }
 
 
