--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,18 +7,20 @@
 h3 {
     font-family: slackey-regular;
     font-size: 48px;
-    margin-top: 40px;
-    margin-bottom: 50px;
+    margin-top: 60px;
+    margin-bottom: 40px;
 }
 
 h4 {
     font-weight: bold;
-    margin-top: 40px;
-    margin-bottom: 50px;
+    margin-top: 60px;
+    margin-bottom: 30px;
 }
 
 .fontetitulo {
     font-family: slackey-regular;
+    margin: 0;
+    padding-top: 60px;
 }
 
 /*
@@ -112,7 +114,8 @@ p {
 /* estrutura blocos*/
 body {
     overflow-x: hidden;
-    background-image: linear-gradient(#adf9b5, #dafad2, #00A7B3);
+    /*background-image: linear-gradient(#adf9b5, #dafad2, #00A7B3);*/
+    background-color: #e4fcdb !important;
 }
 
 #booklet {
@@ -285,6 +288,7 @@ body {
 }
 
 .bloco2-pg1 {
+    /*
     background:
         url(../../img/assets/pg1/mapa1.png),
         url(../../img/assets/pg1/mapa.png),
@@ -292,9 +296,8 @@ body {
     margin: auto;
     background-repeat: no-repeat;
     background-position: center 1337px;
+    */
 }
-
-
 
 .bloco2-pg2 {
     position: relative;
@@ -531,9 +534,7 @@ figcaption {
 }
 
 iframe {
-    width: 580px;
-    height: 360px;
-    margin: 10px auto;
+    margin: 20px auto;
     display: block;
 }
 
@@ -851,14 +852,93 @@ table.sesc td {
 /* fim cards*/
 
 
-
+/*
 .paragrafo-mapa{
     margin-top: 500px;
 }
+*/
 
 .div-flip{
     height: 480px;
 }
+
+
+/*---------- INÍCIO NOVO MAPA ----------*/
+.titulo-mapa{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
+.painel-mapa{
+    width: 840px;
+    height: 700px;
+    margin: 40px auto;
+    background:
+        url(../../img/assets/pg1/mapa1.png),
+        url(../../img/assets/pg1/mapa.png),
+        url(../../img/assets/pg1/mapa_fundo.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.btn-mapa{
+    width: 80px;
+    height: 80px;
+    border: none;
+    position: absolute;
+    border-radius: 100%;
+    box-shadow: #474747 -8px 8px 30px;
+}
+.btn-amazonia{
+    background: url('../../img/assets/pg1/bt_amazonia.png') no-repeat;
+    background-size: 100%;
+    margin-left: 70px;
+    margin-top: 105px;
+}
+.btn-cerrado{
+    background: url('../../img/assets/pg1/bt_cerrado.png') no-repeat;
+    background-size: 100%;
+    margin-left: 580px;
+    margin-top: 60px;
+}
+.btn-caatinga{
+    background: url('../../img/assets/pg1/bt_caatinga.png') no-repeat;
+    background-size: 100%;
+    margin-left: 730px;
+    margin-top: 150px;
+}
+.btn-pantanal{
+    background: url('../../img/assets/pg1/bt_pantanal.png') no-repeat;
+    background-size: 100%;
+    margin-left: 250px;
+    margin-top: 390px;
+}
+.btn-mata{
+    background: url('../../img/assets/pg1/bt_mata.png') no-repeat;
+    background-size: 100%;
+    margin-left: 630px;
+    margin-top: 465px;
+}
+.btn-pampa{
+    background: url('../../img/assets/pg1/bt_pampa.png') no-repeat;
+    background-size: 100%;
+    margin-left: 280px;
+    margin-top: 590px;
+}
+
+.btn-amazonia:hover, .btn-cerrado:hover, .btn-caatinga:hover,
+.btn-pantanal:hover, .btn-mata:hover, .btn-pampa:hover{
+    transform: scale(2);
+    box-shadow: none;
+}
+.btn-amazonia:hover{background-image: url('../../img/assets/pg1/mapa_bt1_hover.png');}
+.btn-cerrado:hover{background-image: url('../../img/assets/pg1/mapa_bt2_hover.png');}
+.btn-caatinga:hover{background-image: url('../../img/assets/pg1/mapa_bt3_hover.png');}
+.btn-pantanal:hover{background-image: url('../../img/assets/pg1/mapa_bt4_hover.png');}
+.btn-mata:hover{background-image: url('../../img/assets/pg1/mapa_bt5_hover.png');}
+.btn-pampa:hover{background-image: url('../../img/assets/pg1/mapa_bt6_hover.png');}
+
+/*----------- FIM NOVO MAPA ------------*/
 
 
 @media (max-width: 2560px) {
@@ -885,6 +965,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -892,6 +973,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
+        */
     }
 
     .bt-mata:hover {
@@ -1023,6 +1105,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -1030,6 +1113,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
+        */
     }
 
     .bt-cerrado {
@@ -1184,6 +1268,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -1191,6 +1276,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
+        */
     }
 }
 
@@ -1202,6 +1288,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -1209,6 +1296,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
+        */
     }
 
     .rellax-9 {
@@ -1391,6 +1479,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -1398,7 +1487,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
-
+        */
     }
 
     .painel {
@@ -1520,6 +1609,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -1527,7 +1617,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
-
+        */
     }
 
     .painel {
@@ -1595,6 +1685,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -1602,6 +1693,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
+        */
     }
 
     .bt-cerrado {
@@ -2176,6 +2268,7 @@ table.sesc td {
     }
 
     .bloco2-pg1 {
+        /*
         background:
             url(../../img/assets/pg1/mapa1.png),
             url(../../img/assets/pg1/mapa.png),
@@ -2183,6 +2276,7 @@ table.sesc td {
         margin: auto;
         background-repeat: no-repeat;
         background-position: center 1337px;
+        */
     }
 
     .bt-mata {
@@ -2387,6 +2481,13 @@ table.sesc td {
 }
 
 @media (max-width:820px) {
+    /*---- NOVO MAPA ----*/
+    .painel-mapa{
+        transform: scale(0.9);
+        margin: -10px -60px;
+    }
+    /*---- FIM NOVO MAPA ----*/
+
     .painel {
         display: flex;
         flex-wrap: nowrap;
@@ -3137,9 +3238,11 @@ table.sesc td {
     }
 }
 
-@media (max-width:500px) {}
 
 @media (max-width:480px) {
+    
+
+
     h3 {
         font-family: slackey-regular;
         font-size: 43px;
@@ -3160,6 +3263,13 @@ table.sesc td {
         height: 100%;
     }
 
+    .bt-mapa_mobile{
+        border-radius: 100%;
+        box-shadow: #474747 -8px 8px 30px;
+        margin: 50px auto !important;
+        width: 180px !important;
+        height: 180px !important;
+    }
     .bt-mata_mobile {
         background-image: url(../../img/assets/pg1/bt_mata.png);
         background-color: transparent;
